test/rails_app/app/views/validates/edit.html.erb
<h1>Editing validate</h1>

<%= render 'form' %>

<%= link_to 'Show', @validate %> |
<%= link_to 'Back', validates_path %>
