test/rails_app/app/views/rejects/edit.html.erb
<h1>Editing reject</h1>

<%= render 'form' %>

<%= link_to 'Show', @reject %> |
<%= link_to 'Back', rejects_path %>
